v1.0/de/_sources/stereo_ins.rst.txt
Stereo-INS

Die stereobildgestützte inertiale Navigation (

INS

) ist Teil des Dynamik-Moduls. Das System kombiniert die Messwerte der
visuellen Odometrie mit den Daten aus der inertialen Messeinheit (

IMU

), um so robuste und hochfrequente Echtzeit-Zustandsschätzungen mit
geringer Latenz anbieten zu können. Das IMU-Modul, das zur Messung der
Linearbeschleunigungen und Drehraten in allen drei Dimensionen dient,
besteht aus drei Beschleunigungsaufnehmern und drei Gyroskopen. Durch
Kombination der Messdaten aus IMU und visueller Odometrie werden die
Zustandsschätzungen mit der gleichen Frequenz wie die IMU-Messungen
(200 Hz) vorgenommen und sind so selbst unter anspruchsvollen
Lichtbedingungen und bei schnellen Bewegungen sehr robust.

Parameter

Das Stereo-INS-Modul heißt "rc_stereo_ins".

Dieses Modul besitzt keine Laufzeitparameter.

Dieses Modul meldet folgende Statuswerte:

Statuswerte des rc_stereo_ins-Moduls      Name  Beschreibung  freq
Frequenz des Stereo-INS-Prozesses in Hertz. Dieser Wert wird auf der
Registerkarte Überblick der Web GUI in der Rubrik Dynamik als
Wiederholrate angezeigt.  state  Interner Zustand
